# mixedbread-ai-langchain

./: .gitignore  README.md  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: publish.yml
examples/: document_loader_example.py  embeddings_example.py  mixedbread_document_loading.py  mixedbread_embeddings.py  mixedbread_reranking.py  mixedbread_vector_store_chunks.py  mixedbread_vector_store_files.py  mixedbread_vector_store_management.py  reranker_example.py  retriever_example.py  vector_store_example.py
mixedbread_ai_langchain/: __init__.py
mixedbread_ai_langchain/common/: client.py  logging.py  mixins.py  utils.py
mixedbread_ai_langchain/compressors/: reranker.py
mixedbread_ai_langchain/embedders/: __init__.py  embeddings.py  types.py
mixedbread_ai_langchain/loaders/: document_loaders.py
mixedbread_ai_langchain/retrievers/: __init__.py  vector_store_file_retriever.py  vector_store_manager.py  vector_store_retriever.py
tests/: test_config.py  test_document_loader.py  test_embeddings.py  test_reranker.py  test_retriever.py  test_retrievers.py  test_vector_store_manager.py
