[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixedbread-ai-langchain"
version = "1.0.0"
description = "Mixedbread AI integration for LangChain, providing embedding, document loading, parsing, reranking, and retrieval components."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["langchain", "mixedbread-ai", "embedding", "reranking", "document-loader", "document-parser", "retrieval", "nlp", "llm", "rag"]
authors = [{ name = "Mixedbread AI", email = "support@mixedbread.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.61",
    "mixedbread>=0.8.1",
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/mixedbread-ai/mixedbread-ai-langchain"
Documentation = "https://github.com/mixedbread-ai/mixedbread-ai-langchain#readme"
Issues = "https://github.com/mixedbread-ai/mixedbread-ai-langchain/issues"
Source = "https://github.com/mixedbread-ai/mixedbread-ai-langchain"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
]

[tool.setuptools]
packages = ["mixedbread_ai_langchain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests that call the Mixedbread AI API (deselect with '-m \"not integration\"')",
]
log_cli = true

[dependency-groups]
dev = [
    "pytest-asyncio==0.24.0",
]

